--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1018,8 +1018,16 @@ section {
   }
 }
 @media screen and (max-width: 390px) {
+  .left-header {
+    height: -webkit-fit-content !important;
+    height: -moz-fit-content !important;
+    height: fit-content !important;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
   .left-header img {
-    max-width: 80% !important;
+    max-width: 55% !important;
   }
   .right-header p {
     font-size: 0.8rem !important;
@@ -1062,5 +1070,64 @@ section {
   }
   .main-btn .btn-text {
     padding: 0 1rem !important;
+  }
+}
+@media screen and (max-width: 280px) {
+  .left-header {
+    height: -webkit-fit-content !important;
+    height: -moz-fit-content !important;
+    height: fit-content !important;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
+  .left-header img {
+    max-width: 80% !important;
+  }
+  .right-header .name {
+    font-size: 1rem !important;
+  }
+  .right-header p {
+    font-size: 0.8rem !important;
+    line-height: 1.5rem !important;
+  }
+  .contact-content-con .left-contact h4 {
+    font-size: 1rem !important;
+  }
+  .contact-info .contact-item {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: baseline !important;
+  }
+  .contact-info .contact-item span {
+    font-size: 0.8rem !important;
+  }
+  .contact-info .contact-item p {
+    font-size: 0.8rem !important;
+  }
+  .contact-content-con .contact-btn {
+    font-size: 0.85rem;
+  }
+  .contact-content-con .contact-btn .contact-btn-text {
+    padding: 0.9rem 0.9rem;
+  }
+  .contact-content-con .right-contact .input-control input,
+.contact-content-con .right-contact .input-control textarea {
+    font-size: 13px !important;
+  }
+  .portfolio-item {
+    position: relative;
+    border-radius: 15px;
+  }
+  .portfolio-item img {
+    width: 100%;
+    height: 150px !important;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 15px;
+  }
+  .main-btn .btn-text {
+    font-size: 0.8rem !important;
+    padding: 0 0.5rem !important;
   }
 }/*# sourceMappingURL=styles.css.map */
